After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780146 - "make check" fails to compile
"make check" fails to compile
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-16 13:22 UTC by Egmont Koblinger
Modified: 2017-03-16 21:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2017-03-16 13:22:17 UTC
Found at https://bugzilla.redhat.com/show_bug.cgi?id=1432940:

"make check" fails with:

vteconv.cc: In function ‘int main(int, char**)’:
vteconv.cc:774:40: error: missing sentinel in function call [-Werror=format=]
         g_test_init (&argc, &argv, NULL);
                                        ^

Inspired by the randomly found answer at http://stackoverflow.com/a/31519147/4457671: changing that NULL to (void*)NULL in vteconv.cc and vtetypes.cc solves the problem.
Comment 1 Christian Persch 2017-03-16 17:42:26 UTC
Use nullptr instead of NULL. Since it's a build fix, it's ok to commit even though we're in code freeze.
Comment 2 Egmont Koblinger 2017-03-16 21:09:30 UTC
Fixed.