build: Fix compilation of unittests

https://bugzilla.gnome.org/show_bug.cgi?id=780146
(cherry picked from commit a31a41d2a93ef45c3940d714f82f58c6b3f9d7d8)